k8s/overlay/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
  namespace: photo-server
spec:
  ingressClassName: traefik
  rules:
    - host: photos.oliverhalasz.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  number: 2283
